kubernetes/applications/dev/myapp/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: dev-myapp
  labels:
    app: myapp
    environment: dev
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: myapp
